--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,8 +31,7 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
-}
-
-dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.0'
+    dependencies{
+        implementation 'androidx.core:core:1.0.1'
+    }
 }
